# cookiecutter-kata-gtest

./: README.md  cookiecutter.json
{{ cookiecutter.kata|lower }}/: CMakeLists.txt  README.md
{{ cookiecutter.kata|lower }}/.build/: README.txt
{{ cookiecutter.kata|lower }}/include/: {{ cookiecutter.kata }}.hpp
{{ cookiecutter.kata|lower }}/src/: {{ cookiecutter.kata }}.cpp
{{ cookiecutter.kata|lower }}/test/: {{ cookiecutter.kata }}Test.cpp
{{ cookiecutter.project_name }}/: CMakeLists.txt  README.md
{{ cookiecutter.project_name }}/include/: {{ cookiecutter.kata_name }}.hpp
{{ cookiecutter.project_name }}/src/: {{ cookiecutter.kata_name }}.cpp
{{ cookiecutter.project_name }}/test/: {{ cookiecutter.kata_name }}Test.cpp
{{ cookiecutter.repo_name }}/: .gitignore  CMakeLists.txt  README.md
{{ cookiecutter.repo_name }}/src/: {{ cookiecutter.kata }}.cpp
{{ cookiecutter.repo_name }}/test/: {{ cookiecutter.kata }}Test.cpp
